<resources>
    <string name="app_name">MangTest</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in2">登录/注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_login">账号登录</string>
    <string name="in_phone">请输入手机号码</string>
    <string name="input_number">请输入账号</string>
    <string name="input_figure_code">请输入图形验证码</string>
    <string name="input_phone_code">请输入短信验证码</string>
    <string name="verificationCode">请输入验证码</string>
    <string name="sendVerificationCode">发送验证码</string>
    <string name="figure_code">图形验证码:</string>
    <string name="no_password">忘记密码</string>
    <string name="setting_password">设置密码</string>
    <string name="bind_phone">绑定手机号码</string>
    <string name="login_sms">短信登录</string>
    <string name="login_sms_register">短信登录/注册</string>
    <string name="sendCode">发送验证码</string>
    <string name="sms_code">短信验证码：</string>
    <string name="phone">手机号码：</string>
    <string name="new_password">新密码：</string>
    <string name="verify_password">确认密码：</string>
    <string name="invite_code">邀请码：</string>
    <string name="input_new_password">请输入您的新密码</string>
    <string name="input_new_password2">请再次输入您的新密码</string>
    <string name="submit">提交</string>
    <string name="bind">绑定</string>
    <string name="account">账号：</string>
    <string name="userProtocol">登录即表示同意《用户协议》</string>
    <string name="email">请输入您的邮箱地址</string>
    <string name="search_content">请输入您感兴趣的内容</string>
    <string name="enter_name">版权登记</string>
    <string name="transaction">版权交易</string>
    <string name="activist">监测维权</string>
    <string name="park_services">园区服务</string>
    <string name="Information">为创意打造“护城河”——马栏山知识产权保护开发联盟...</string>
    <string name="nanniwan">《南泥湾》</string>
    <string name="item_home">汪峰：搜罗民歌里的记忆</string>
    <string name="creative">激活创意价值</string>
    <string name="mango">芒果动听</string>
    <string name="golden_bee_audio">金蜂音像</string>
    <string name="directed_by">指导单位</string>
    <string name="co">合作单位</string>
    <string name="interest">请输入你感兴趣的内容</string>
    <string name="cancel">取消</string>
    <string name="search_gistory">搜索记录</string>
    <string name="copyright_registration">版权登记</string>
    <string name="copyright_transaction">版权交易</string>
    <string name="recommend">推荐</string>
    <string name="audio">金蜂音像</string>
    <string name="mangguo">芒果动听</string>
    <string name="comic">黑马漫画</string>
    <string name="video_zone">视频专区</string>
    <string name="audio_zone">音频专区</string>
    <string name="anime_zone">动漫专区</string>
    <string name="material_zone">素材专区</string>

</resources>
