<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="352dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_home_buy_back_1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="153dp"
        android:text="@string/no_password"
        android:textColor="#333333"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="80dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:text="@string/phone"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:background="#FFFFFF"
        android:ems="11"
        android:hint="@string/in_phone"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:text="@string/figure_code"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="MissingConstraints" />

    <!--    <EditText-->
    <!--        android:id="@+id/editText2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="12dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="请输入图形验证码"-->
    <!--        android:inputType="textPassword"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView6"-->
    <!--        tools:layout_editor_absoluteX="18dp" />-->

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView7"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="276dp"-->
    <!--        android:layout_marginTop="28dp"-->
    <!--        android:layout_marginEnd="38dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.487"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView6"-->
    <!--        app:srcCompat="@mipmap/icon_login_eyes" />-->

    <LinearLayout
        android:id="@+id/CodeRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <EditText
            android:id="@+id/ImageViewCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:hint="@string/input_figure_code"
            android:inputType="textPassword"
            android:textSize="15sp"
            tools:ignore="Autofill,TextFields" />

        <ImageView
            android:id="@+id/imageViewCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="66dp"
        android:text="@string/sms_code"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/CheckCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <EditText
            android:id="@+id/CheckCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:hint="@string/input_phone_code"
            android:inputType="textPassword"
            android:textSize="16sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields" />

        <Button
            android:id="@+id/SendCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/send_code"
            android:text="@string/sendCode"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/new_password"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckCodeLayout" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:ems="11"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        android:textColor="#CCCCCC"
        android:textSize="15sp"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/verify_password"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:ems="11"
        android:hint="@string/input_new_password2"
        android:inputType="textPassword"
        android:textColor="#CCCCCC"
        android:background="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/button"
        android:layout_width="263dp"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_shape_button"
        android:onClick="onSubmit"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

</androidx.constraintlayout.widget.ConstraintLayout>