<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BindPhoneActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="352dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_home_buy_back_1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="153dp"
        android:background="#00000000"
        android:text="@string/bind_phone"
        android:textColor="#333333"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="80dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:text="@string/phone"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="61dp"
        android:background="#FFFFFF"
        android:ems="11"
        android:hint="@string/in_phone"
        android:inputType="phone"
        android:paddingStart="5dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:text="@string/figure_code"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/CodeRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <EditText
            android:id="@+id/ImageViewCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:background="#FFFFFF"
            android:hint="@string/input_figure_code"
            android:inputType="textPassword"
            android:textSize="15sp"
            tools:ignore="Autofill,TextFields" />

        <ImageView
            android:id="@+id/imageViewCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="66dp"
        android:text="@string/sms_code"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/CheckCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <EditText
            android:id="@+id/CheckCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:background="#FFFFFF"
            android:hint="@string/input_phone_code"
            android:inputType="textPassword"
            android:textSize="16sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields" />

        <Button
            android:id="@+id/SendCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/send_code"
            android:text="@string/sendCode"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="263dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="246dp"
        android:background="@drawable/login_shape_button"
        android:onClick="onBind"
        android:text="@string/bind"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>