<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingPasswordActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="352dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_home_buy_back_1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="153dp"
        android:background="#00000000"
        android:text="@string/setting_password"
        android:textColor="#333333"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="233dp"
        android:layout_marginBottom="532dp"
        android:text="@string/setting_password"
        android:textColor="#212121"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="188dp"
        android:text="@string/account"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="453dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/input_number"
        android:inputType="numberPassword"
        android:textColor="#5E6A9A"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/new_password"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="11dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        android:textColor="#212121"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/verify_password"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="11dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/input_new_password2"
        android:inputType="textPassword"
        android:textColor="#212121"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="272dp"
        android:text="@string/invite_code"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="11dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/input_new_password2"
        android:inputType="textPassword"
        android:textColor="#212121"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button"
        android:layout_width="263dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="78dp"
        android:background="@drawable/login_shape_button"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>