<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginCodeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="134dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="156dp"
        android:text="@string/login_sms_register"
        android:textColor="#212121"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/CheckCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="54dp"
        android:layout_marginTop="221dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/CheckCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:hint="@string/input_phone_code"
            android:inputType="textPassword"
            android:textSize="16sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields" />

        <Button
            android:id="@+id/SendCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/send_code"
            android:text="@string/sendCode"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="232dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_login_phone"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/CodeRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="55dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ImageViewCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:hint="@string/input_figure_code"
            android:inputType="textPassword"
            android:textSize="15sp"
            tools:ignore="Autofill,TextFields" />

        <ImageView
            android:id="@+id/imageViewCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="290dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_login_yz"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="348dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_login_message"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="333dp"
        android:background="#FFFFFF"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_login_delete"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="408dp"
        android:text="@string/userProtocol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="263dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/login_shape_button"
        android:enabled="false"
        android:text="@string/action_sign_in2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="72dp"
        android:text="@string/account_login"
        android:onClick="onAccountLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>